New concl from Beatrice

--- a/draft.tex
+++ b/draft.tex
@@ -510,7 +510,8 @@ In this paper we have considered a social choice setting with partial informatio
 In this setting, we have proposed the use of minimax regret both as a means of robust winner determination as well as a guide to the process of simultaneous elicitation of preferences and voting rule.
 Our experimental results %on randomly generated and real world data sets 
 suggest that regret-based elicitation is effective and allow to quickly reduce worst regret significantly.
-%Regret-based elicitation allows to determine near-optimal winners using only few information about the agents' preferences.
+%regret, but they also show that starting with zero knowledge became a pretentious approach really quickly when increasing the size of the problem. Future works will therefore include the test of these strategies on partial specified profiles, ideally on real datasets. An other important direction is the extension to voting rules beyond scoring rules.
+ %Regret-based elicitation allows to determine near-optimal winners using only few information about the agents' preferences.
 
 As part of the contribution of this work, we publish an open-source library that allows to reproduce our experiments, and more (url not displayed for anonymity reasons).
 
