ijcai 2020 format and minors

--- a/draft.tex
+++ b/draft.tex
@@ -1,4 +1,4 @@
-\input{ijcai_preamble} 
+\input{ijcai20} 
 \author{ID: 7094}
 %\author{Beatrice Napolitano$^1$\and Olivier Cailloux$^1$	\and  Paolo Viappiani$^{2}$
 %	\affiliations $^1$ LAMSADE, UMR 7243, CNRS and Universit\'e Paris Dauphine, PSL Research University, Paris, France\\ $^2$ LIP6, UMR 7606, CNRS and Sorbonne Universit\'e, Paris, France
@@ -165,7 +165,7 @@ s(x; \profile, \w) = \sum_{j=1}^{n} w_{v_j(x)}
 = \sum_{r=1}^{m} \alpha^{x}_r w_r 
 \end{align}
 where $\alpha^{x}_r$ is the number of times that alternative $x$ was ranked in the $r$-th position.
-The winners are the alternatives gighest scores.
+The winners are the alternatives with the highest scores.
 
 In this work we assume fixed, but unknown to us, a profile $\profile^*$, representing the preferences $\pref_j^*$ of the agents, and a weight vector $\w^*$, representing the preferences of the chair, and we want to reason about partial preference information concerning those objects.
 At a given time, our knowledge of agent $j$'s preference is encoded by a partial order over the alternatives, thus a transitive and asymmetric binary relation, denoted by $\ppref_j$. 
