--- a/AAMAS2021/minimax.tex
+++ b/AAMAS2021/minimax.tex
@@ -78,7 +78,7 @@
 Social choice deals with the problem of determining a consensus choice from the preferences of different agents (voters).
 In the classical setting, the voting rule is fixed beforehand and full information concerning the preferences of the agents is provided.
 Recently, the assumption of full preference information has been questioned by a number of researchers and several methods for eliciting preferences have been proposed.
-In this paper we go one step further and we assume that both the voting rule and the agents preferences are partially specified. Focusing on positional scoring rules, we assume that the chair, while  not able to give a precise definition of the rule, is capable of answering simple questions  requiring to pick a winner from a specific  example profile.
+In this paper we go one step further and we assume that both the voting rule and the agents' preferences are partially specified. Focusing on positional scoring rules, we assume that the chair, while  not able to give a precise definition of the rule, is capable of answering simple questions  requiring to pick a winner from a specific  example profile.
 Moreover, the preferences of the agents are incrementally acquired by asking comparison queries. In this setting, we propose a method  for robust approximate winner determination with minimax regret. We also provide an interactive elicitation protocol based on minimax regret and develop several query strategies that interleave questions to the chair and questions to the agents in order to attempt to acquire the most relevant information in order to quickly converge to optimal or a near-optimal alternative.
 \end{abstract}
 
@@ -351,7 +351,7 @@ Then, we describe different strategies to determine informative queries to ask n
 We distinguish between questions asked to the agents and questions asked to the chair.
 As {\em questions asked to the agents} it is natural to consider comparison queries asking to compare two alternatives.
 %Another common type of queries are {\em top-k}, asking to each agent her $k$ most preferred alternatives.
-The effect of a response to a question asked to an agent is the increase in our knowledge about the agents rankings, thus augmenting the partial profile $\pprofile$. 
+The effect of a response to a question asked to an agent is the increase in our knowledge about the agents' rankings, thus augmenting the partial profile $\pprofile$. 
 If agent $j$ answers a comparison query stating that alternative $a$ is preferred to $b$, then the partial order $\ppref_j$ is augmented with $a \ppref_j b$ and by transitive closure.
 
 A bit more discussion is needed about {\em questions asked to the chair}.
@@ -396,7 +396,7 @@ Indeed, it can be beneficial to split efforts asking questions to the chair and 
 We define here the various strategies we tested experimentally. A strategy tells us, given the current partial knowledge $(\pprofile, W)$, which question should be asked next.
 
 The \strat{Random} strategy gives a baseline for comparison and informs about the difficulty of an elicitation problem. 
-This strategy first decides with a probability of $1/2$ each whether it will ask a question about weights or a question about a preference ordering (unless the profile is already known entirely). If it opted for a question about weights, it draws one rank in $2 ≤ r ≤ m-2$ equiprobably \commentOC{Isn’t this $1 ≤ r$?}, takes the middle of the interval of values for $\lambda$ that are still possible considering our knowledge so far, and asks whether $w_r - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$. The intervals are initialized to $[1, n]$. If it opted for a question to agents, it draws equiprobably among the agents whose preference is not known entirely; draws an alternative $a$ equiprobably among those involved in some incomparabilities in $\ppref_j$; and draws an alternative $b$ equiprobably among those incomparable with $a$ in $\ppref_j$.
+This strategy first decides with a probability of $1/2$ each whether it will ask a question about weights or a question about a preference ordering (unless the profile is already known entirely). If it opted for a question about weights, it draws one rank in $1 ≤ r ≤ m-2$ equiprobably \commentOC{Isn’t this $1 ≤ r$?} \commentBN{Yep.}, takes the middle of the interval of values for $\lambda$ that are still possible considering our knowledge so far, and asks whether $w_r - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$. The intervals are initialized to $[1, n]$. If it opted for a question to agents, it draws equiprobably among the agents whose preference is not known entirely; draws an alternative $a$ equiprobably among those involved in some incomparabilities in $\ppref_j$; and draws an alternative $b$ equiprobably among those incomparable with $a$ in $\ppref_j$.
 
 The \strat{Pessimistic} strategy selects the question that leads to minimal regret in the worst case, considering both possible answers to the question. Assume that a question leads to the possible new knowledge states $(\pprofile_1, W_1)$ and $(\pprofile_2, W_2)$, depending on the answer. Then the badness of the question in the worst case is:
 \[\max_{i=1,2} \MMR(\pprofile_i,W_i) \]
@@ -405,14 +405,14 @@ This badness measure gives a way of picking questions among a set of possible qu
 However, to avoid the absorption property of max, we adopt the $\leximax$ criterion as an aggregator: if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest value.
 We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it estimates an upper bound to the possible quality of a strategy.
 
-The \strat{Limited pessimistic} strategy uses the same criterion as the pessimistic strategy, but limiting it to a small set of $n+1$ candidate questions: one per agent, and one to the chair. It uses the heuristic proposed by \citet{Lu2011} to define the candidate questions to the agents. Considering agent $j$, either $x^{*} \ppref_j \bar{y}$, or $\bar{y} \ppref_j x^{*}$, or $x^{*}$ and $\bar{y}$ are incomparable in $\ppref_j$. \commentOC{I think $\bar{y}$ is not defined.} As shown in the proof of Claim \ref{claim:completion}, in order to increase $\PMR(x^{*},\bar{y})$, an adversary should place as many alternatives as he can above $x^{*}$ in the first case, and between $\bar{y}$ and $x^{*}$ in the second. An intuitive way to reduce the pairwise max regret is, therefore, to directly ask questions involving such alternatives \commentOC{(with equal likelyhood?)}, hoping for an answer that would prevent the adversary to play his best game. If $x^{*}$ and $\bar{y}$ are incomparable, then we just ask the agent $j$ to compare them.
+The \strat{Limited pessimistic} strategy uses the same criterion as the pessimistic strategy, but limiting it to a small set of $n+1$ candidate questions: one per agent, and one to the chair. Let $(x^{*},\bar{y}, \bar{\profile}, \bar{\w})$ be the current solution of the minimax regret, where $\bar{y}, \bar{\profile}, \bar{\w}$ are, respectively, the choice of $y$, the completion of the profile and the selection of weights for which $x^{*}$ is the minimax optimal alternative. The \strat{Limited pessimistic} strategy first selects $n$ candidates questions to the agents using the heuristic proposed by \citet{Lu2011}. Considering agent $j$, either $x^{*} \ppref_j \bar{y}$, or $\bar{y} \ppref_j x^{*}$, or $x^{*}$ and $\bar{y}$ are incomparable in $\ppref_j$. As shown in the proof of Claim \ref{claim:completion}, in order to increase $\PMR(x^{*},\bar{y})$, an adversary should place as many alternatives as he can above $x^{*}$ in the first case, and between $\bar{y}$ and $x^{*}$ in the second. An intuitive way to reduce the pairwise max regret would be, therefore, to ask questions involving such alternatives \commentOC{(with equal likelyhood?)}\commentBN{We are not asking questions yet. We select as a candidate question the one corresponding to the situation. If you mean "what if there are several alternatives that can be placed between the two?" then yes, we pick one equiprobably.}, hoping for an answer that would prevent the adversary to play his best game. If $x^{*}$ and $\bar{y}$ are incomparable, then the candidate question to agent $j$ simply consists in comparing the two alternatives.
 To define the candidate question to the chair, consider
 %\begin{align}
 $\w^\tau = \argmin_{\w \in W} s(\bar{y}; \bar{\profile}, \w) - s(x^{*}; \bar{\profile}, \w)$,
 %\end{align}
 the weight vector that minimize the $\PMR$ in the worst case.
 We compare $\bar{\w}$ and $\w^{\tau}$ component-wise to find the position $r$ that is most valuable to ask about (the one that maximizes $\abs{\bar{\w}_r - \w^{\tau}_r}$), and choose $\lambda$ as the middle of the interval of possible values for that rank.
-We then evaluate, for each candidate question, the minimax regret for the two possible answers; finally we choose the best according to $\leximax$.
+After having selected the candidate questions, we apply the Pessimistic strategy. We evaluate, for each of the questions, the minimax regret for the two possible answers and we choose the best according to $\leximax$.
 
 Lastly, the \strat{Two phases} strategy is developed in order to investigate the effect of varying the proportion of questions asked to agents and to the chair. %The \strat{Two phases - vc} first asks $p$ questions to the agents, then $k-p$ questions to the chair, using in both cases Limited pessimistic to select the specific question. The \strat{Two phases - cv} strategy starts with $p$ questions to the chair, then asks to the agents. \commentOC{If our XPs exhibit no significant change between vc and cv (or if we don’t have time to run them), I will drop this distinction.}
 It first asks $p$ questions to the chair, then $k-p$ questions to the agents, using in both cases the same method as \strat{Limited pessimistic} to select the specific question. 
@@ -424,25 +424,28 @@ Note that when asking first only questions to the chair, if the obtained knowled
 
 \section{Empirical Evaluation} 
 \label{sec:experiments}
+\commentBN{Change the text according to the new tables.}
 
-\sisetup{round-mode=places, round-precision=1, table-figures-integer=1, table-figures-decimal=1}
+\sisetup{round-mode=places, round-precision=2, table-figures-integer=1, table-figures-decimal=2}
 \begin{table}
 	\begin{center}
 		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 			\toprule
 			{k} & {Rnd} & {sd} & {Pes.} & {sd} & {L.\ pes.} & {sd} \\
 			\midrule
-			0 & 5.0 & 0 & 5.0 & 0 & 5.0 & 0\\
-			5 & 4.958 & 0.100 & 3.741 & 0.024 & 4.350 & 0.604\\
-			10 & 4.709 & 0.436 & 3.283 & 0.423 & 3.323 & 0.374\\
-			15 & 4.432 & 0.467 & 2.716 &0.410 & 2.722 & 0.672\\
-			20 & 3.666 & 0.522 & 1.549 & 0.430 & 2.145 & 0.716\\
-			25 & 3.068 & 0.679 & 1.424 &  0.512 & 0.921 & 0.569\\
-			30 & 2.631 & 0.466 & 0.394 & 0.359 & 0.470 & 0.355\\
+			0 & 10.0 & 0.0 & 10.0 & 0.0 & 10.0 & 0.0\\
+			20 & 9.05 & 0.51 & 7.38 & 0.65 & 6.08 & 0.76\\
+			40 & 7.3 & 0.62 & 4.21 & 1.18 & 2.77 & 1.27\\
+			60 & 6.01 & 0.81 & 1.56 &0.98 & 1.23 & 1.22\\
+			80 & 4.72 & 1.07 & 0.2 & 0.33 & 0.55 & 0.71\\
+			100 & 3.0 & 0.97 & 0.0 &  0.0 & 0.2 & 0.28\\
+			120 & 1.31 & 1.15 & 0.0 & 0.0 & 0.1 & 0.21\\
+			140 & 0.44 & 0.85 & 0.0 & 0.0 & 0.1 & 0.21\\
+			150 & 0.21 & 0.58 & 0.0 & 0.0 & 0.1 & 0.21\\
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{Minimax regret in problems of size $(5, 5)$ after $k$ questions.}
+	\caption{Minimax regret in problems of size $(5, 10)$ after $k$ questions over $25$ runs.}
 	\label{fig:55}
 \end{table}
 
@@ -470,7 +473,7 @@ Our first goal is to see, with a small problem size ($m = 5, n = 5$) and the (ti
 %We also want to see how realistic our approach is for various problem sizes, by estimating the number of questions we would have to ask before being able to reduce the worst regret significantly.
 
 We use the following protocol.
-Having picked a problem size $(m, n)$, a number of questions $k$ and a strategy, we randomly generate an “oracle”, containing the true preferences of the agents (i.e. the linear orders) and the weights associated with the chair's scoring rule. We start with empty knowledge ($\pprofile = (\emptyset_j), W = \W$) about the preference orderings of the agents or the weight differences favored by the chair. We obtain the first question to be asked using the selected strategy, as described above. We use the oracle to answer the question and update our knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained. Then we compute the resulting $\MMR$. We repeat this whole experiment 10 times, for a given $(m, n, k)$, and report the average resulting $\MMR$ and the standard deviation.
+Having picked a problem size $(m, n)$, a number of questions $k$ and a strategy, we randomly generate an “oracle”, containing the true preferences of the agents (i.e. the linear orders) and the weights associated with the chair's scoring rule. We start with empty knowledge ($\pprofile = (\emptyset_j), W = \W$) about the preference orderings of the agents or the weight differences favored by the chair. We obtain the first question to be asked using the selected strategy, as described above. We use the oracle to answer the question and update our knowledge, which is thus used to obtain the next question. This is repeated until $k$ answers have been obtained. Then we compute the resulting $\MMR$. We repeat this whole experiment 10 times, for a given $(m, n, k)$, and report the average resulting $\MMR$ and the standard deviation \textit{sd}.
 
 The results are displayed in \cref{fig:55,fig:1020,fig:p}, where strategies are designated by Rnd for Random, Pes. for Pessimistic, L.\ pes. for Limited pessimistic and 2 ph. for Two phases. 
 
@@ -481,23 +484,23 @@ We observe that the Pessimistic strategy is able to reduce the regret almost com
 
 \begin{table}
 	\begin{center}
-		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]r}
+		\begin{tabular}{S[table-figures-integer=2, table-number-alignment = right, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left]}
 			\toprule
-			{p} & {Two ph.} \\
+			{p} & {Comm. Fst.} & {sd} & {Vot. Fst.} & {sd} \\
 			\midrule
-			0 & 11.49 \\
-			25 & 9.99 \\
-			50 & 11.97 \\
-			75 & 12.99 \\
-			100 & 14.70 \\
-			125 & 15.77 \\
-			150 & 17.29 \\
-			175 & 18.85 \\
-			200 & 20.00 \\
+			0 & 5.02 & 0.82 & & \\
+			50 & 6.47 & 1.14 & & \\
+			100 & 9.4 & 1.58 & & \\
+			150 &  & & & \\
+			100 &  & & & \\
+			125 &  & & & \\
+			150 &  & & 12.31 & 0.96 \\
+			200 &  & & 16.12 & 1.06 \\
+			250 &  & & 20.0 & 0.0 \\
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{Regret in problems of size $(10, 20)$ after $200$ questions (one repetition only).}
+	\caption{Regret in problems of size $(10, 20)$ after $250$ questions over $5$ runs. Where $p$ represents the number of questions asked to the committee.}
 	\label{fig:p}
 \end{table}
 
