--- a/AAMAS2021/minimax.tex
+++ b/AAMAS2021/minimax.tex
@@ -343,7 +343,7 @@ At each step, the system may ask a question either to one of the agents about he
 The goal is to acquire relevant information to reduce minimax regret as quickly as possible.
 As termination condition of elicitation, we can check whether minimax regret is lower than a threshold; if we wish optimality, we can perform elicitation until minimax regret drops to zero.
 
-The remainder of this Section is structured as follows.
+The remainder of this section is structured as follows.
 First of all, we discuss the different types of questions that can be asked to the agents and to the chair, and the way responses are handled.
 Then, we describe different strategies to determine informative queries to ask next, with the goal of reducing $\MMR(\pprofile,W)$ quickly.
 
