--- a/AAMAS2021/minimax.tex
+++ b/AAMAS2021/minimax.tex
@@ -9,8 +9,8 @@
 %%% Use the first variant below for the final paper.
 %%% Use the second variant below for submission.
 
-\documentclass[sigconf]{aamas} 
-%\documentclass[sigconf,anonymous]{aamas} 
+%\documentclass[sigconf]{aamas} 
+\documentclass[sigconf, anonymous]{aamas} 
 
 %%% Load required packages here (note that many are included already).
 \input{preamble/packages}
