--- a/AAMAS2021/minimax.tex
+++ b/AAMAS2021/minimax.tex
@@ -495,7 +495,7 @@ We observe that the Pessimistic strategy is able to reduce the regret almost com
 			\bottomrule
 		\end{tabular}
 	\end{center}
-	\caption{Average regret in problems of size $(10, 20)$ after $250$ questions over $5$ runs. Where $p$ represents the number of questions asked to the committee.}
+	\caption{Average regret in problems of size $(10, 20)$ after $250$ questions over $5$ runs. Where $p$ represents the number of questions asked to the chair.}
 	\label{fig:p}
 \end{table}
 
