--- a/preamble/math.tex
+++ b/preamble/math.tex
@@ -59,6 +59,9 @@
 \DeclareMathOperator*{\argmax}{argmax}
 \DeclareMathOperator*{\argmin}{argmin}
 
+\DeclareMathDelimiter{(}{\mathopen} {operators}{"28}{largesymbols}{"00}
+\DeclareMathDelimiter{)}{\mathclose}{operators}{"29}{largesymbols}{"01}
+
 \newtheorem{claim}{Claim}
 \newtheorem{prop}{Proposition}
 \newtheorem{corollary}{Corollary}
