--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -5,7 +5,7 @@
 	\usepackage{natbib}
 	\newcommand\hmmax{0}
 	\newcommand\bmmax{0}
-	\usepackage{lmodern}
+	\usepackage{lmodern} 
 %Encode resulting accented characters correctly in resulting PDF, permits copy from PDF.
 	\usepackage[T1]{fontenc}
 %UTF8 seems to be the default in recent TeX installations, but not all, see https://tex.stackexchange.com/a/370280.
@@ -17,7 +17,7 @@
 %Text Companion fonts, much used together with CM-like fonts. Provides \texteuro and commands for text mode characters such as \textminus, \textrightarrow, \textlbrackdbl.
 	\usepackage{textcomp}
 %St Mary’s Road symbol font, used for ⟦ = \llbracket.
-	\usepackage{stmaryrd}
+%	\usepackage{stmaryrd}
 \usepackage{centernot}
 %Solves bug in lmodern, https://tex.stackexchange.com/a/261188; probably useful only for unusually big font sizes; and probably better to use exscale instead. Note that the authors of exscale write against this trick.
 	%\DeclareFontShape{OMX}{cmex}{m}{n}{
