--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -5,7 +5,7 @@
 	\usepackage{natbib}
 	\newcommand\hmmax{0}
 	\newcommand\bmmax{0}
-	\usepackage{lmodern} 
+%	\usepackage{lmodern} 
 %Encode resulting accented characters correctly in resulting PDF, permits copy from PDF.
 	\usepackage[T1]{fontenc}
 %UTF8 seems to be the default in recent TeX installations, but not all, see https://tex.stackexchange.com/a/370280.
