Solved pbl with autonum & hyperref

--- a/minimax.tex
+++ b/minimax.tex
@@ -9,6 +9,7 @@
 %%% Use the first variant below for the final paper.
 %%% Use the second variant below for submission.
 
+\PassOptionsToPackage{hypertexnames=false, pdfusetitle, linkbordercolor={1 1 1}, citebordercolor={1 1 1}, urlbordercolor={1 1 1}}{hyperref}
 %\documentclass[sigconf]{aamas} 
 \documentclass[sigconf, anonymous]{aamas} 
 
